--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Digital Campers</title>
 </head>
 <body>
-  <h1>🌐 Welcome to Digital Campers 🚀</h1>
-  <p>Your digital journey starts here...</p>
+  <h1> This site is under maintenance!!!.</h1>
 </body>
 </html>
